# HWW14

./: alembic.ini  main.py  pyproject.toml  test.db
docs/source/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 1f12a5d93e1e_опис_змін.py  5ab2abdc842a_опис_змін.py  8a5997fc7611_newww.py  9bbdb712dc06_опис_змін.py  c1788e7b065c_fdgdfg.py  d1eeeb63b049_neeeeew.py  efbbbf5a2a11_опис_змін.py  fd553fbde050_init.py
postgres-data/base/13481/: pg_internal.init
postgres-data/global/: 1262  2671  2672  pg_control  pg_internal.init
postgres-data/pg_stat/: db_0.stat  db_13481.stat  global.stat
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
tests/: conftest.py  test_unit_repository_contacts.py  test_unit_repository_users.py
